--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "cookie": "^1.0.1",
     "ioredis": "^5.4.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
